Add support for GraalVM
This commit introduces another abstraction to support both the
wasmer backend and GraalVM.